--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,573 +1,428 @@
-@font-face {
-  /* sans serif */
-  font-family: "Open Sans";
-  src: url("../fonts/OpenSans-Regular.ttf") format("truetype");
+* {
+  box-sizing: border-box;
 }
 
 @font-face {
-  /* sans serif */
+  font-weight: 400;
   font-family: Neucha;
-  src: url("../fonts/Neucha-Regular.ttf") format("truetype");
+  src: url(../fonts/Neucha-Regular.ttf);
 }
 
-/* Base variables */
+@font-face {
+  font-weight: 400;
+  font-family: "Open Sans";
+  src: url(../fonts/OpenSans-Regular.ttf);
+}
 
 :root {
-  /* Colors */
-  --color-white: #fff;
-  --color-white-shade: #d7ccc0;
-  --color-bright: #f5f4f0;
-  --color-main: #fe8a02;
-  --color-main-dark: #42413c;
-  --color-dark: #2a2626;
-  --color-dark-shade: #908d8b;
-  --color-brown: #b09a81;
-  --color-blue: #1085c5;
-  --color-bootstrap-dark: #212529;
-
-  /* Fonts */
-  --fonts-family-neucha: neucha, sans-serif;
-  --fonts-family-open-sans: "Open Sans", sans-serif;
-  --fonts-size: 16px;
-  --fonts-line-height: 1.6em;
-  --fonts-color: #2a2626;
-
-  /* Headers */
-  --headers-line-height: 1.2em;
-  --headers-font-weight: normal;
-  --headers-h1-size: 72px;
-  --headers-h2-size: 60px;
-  --headers-h3-size: 34px;
-
-  /* Sections */
-  --sections-max-width: 1110px;
-  --sections-justify-content: center;
-  --sections-padding: 100px 0;
+  --white: #fff;
+  --light-white: #d7ccc0;
+  --light: #f5f4f0;
+  --main: #fe8a02;
+  --main-dark: #42413c;
+  --dark: #2a2626;
+  --light-dark: #908d8b;
+  --brown: #b09a81;
+  --blue: #1085c5;
 }
 
-/* Main CSS */
+.color-brown {
+  background-color: var(--brown);
+}
 
-.body {
-  box-sizing: border-box;
+.color-light {
+  background-color: var(--light);
+}
+
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+
+  color: var(--dark);
+  font-size: 16px;
+  line-height: 1.2em;
 }
 
-.button {
-  background-color: var(--color-main);
+a {
+  text-decoration: none;
+
+  outline: none;
 }
 
-.button:hover {
-  background-color: #ea7600;
-}
-
-.f-container {
-  display: flex;
-}
-
-.headline {
-  z-index: 1;
-
-  margin-block-start: 0;
-  margin-block-end: 0;
-
-  color: var(--color-main);
-  font-weight: var(--headers-font-weight);
-  font-family: var(--fonts-family-neucha);
-  line-height: var(--headers-line-height);
-}
-
-.headline_size_h1 {
-  font-size: var(--headers-h1-size);
-}
-
-.headline_size_h2 {
-  font-size: var(--headers-h2-size);
-}
-
-.headline_size_h3 {
-  font-size: var(--headers-h3-size);
-}
-
-.headline_size_52 {
-  font-size: 52px;
-}
-
-.headline_color_dark {
-  color: var(--color-dark);
-}
-
-.headline_color_white {
-  color: var(--color-white);
-}
-
-.pos_relative {
-  position: relative;
-}
-
-.section {
-  margin: 0 auto;
-}
-
-.section__content {
-  flex-direction: column;
-  justify-content: var(--sections-justify-content);
-
-  max-width: var(--sections-max-width);
-
-  margin: 0 auto;
-  padding: var(--sections-padding);
-}
-
-.section__content_centered {
-  align-items: center;
-
-  padding-top: 0;
-  padding-bottom: 0;
-
-  text-align: center;
-}
-
-.section__content_padding_top {
-  padding-top: 200px;
-}
-
-.shadow {
-  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
-}
-
-.sr-only {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
+h1,
+h2,
+h3 {
+  margin: 0;
   padding: 0;
 
-  overflow: hidden;
-
-  white-space: nowrap;
-
-  border: 0;
+  color: var(--main);
+  font-family: Neucha, cursive;
+  line-height: 1.2em;
 }
 
-.text {
-  margin-block-start: 0;
-  margin-block-end: 0;
-
-  font-weight: 400;
-  font-size: var(--fonts-size);
-  font-family: var(--fonts-family-open-sans);
-  line-height: var(--fonts-line-height);
+h1 {
+  font-size: 72px;
 }
 
-.text_color_bootstrap_dark {
-  color: var(--color-bootstrap-dark);
+h2 {
+  font-size: 60px;
 }
 
-.text_color_dark {
-  color: var(--color-dark);
+h3 {
+  font-size: 34px;
 }
 
-.text_color_white {
-  color: var(--color-white);
+p {
+  margin: 0;
+  padding: 0;
+
+  font-size: 16px;
+  line-height: 1.6em;
 }
 
-.text_size_14px {
-  font-size: 14px;
-}
+.bg-img::before {
 
-/* Backgrounds */
-
-.bright-background {
-  z-index: 0;
-
-  background-color: var(--color-bright);
-}
-
-.brown-background {
-  z-index: 0;
-
-  background-color: var(--color-brown);
-}
-
-.main-background {
-  position: relative;
-}
-
-.main-background::before {
   position: absolute;
-  z-index: -2;
 
   width: 100%;
-  height: 100%;
+  height: 860px;
+  margin: 0;
 
-  background-image: url("../images/background.png");
+  background-image: url("/images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
-
   opacity: 0.1;
 
   content: "";
 }
 
-.main-dark-background {
-  background: var(--color-main-dark);
-}
+.container {
+  position: relative;
 
-.white-background {
-  background: var(--color-white);
-}
-
-/* Universal Bright-Dark Themes CSS */
-
-.universal__bottom-part {
+  display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 100px 0;
 }
 
-.universal__explanation {
-  margin-top: 30px;
-  margin-bottom: 0;
-
-  font-weight: var(--headers-font-weight);
-  font-size: var(--headers-h3-size);
-  font-family: var(--fonts-family-neucha);
-  line-height: var(--headers-line-height);
+/* 1 слайд */
+header .container {
+  justify-content: space-between;
+  height: 100vh;
+  min-height: 900px;
 }
 
-.universal__header {
-  margin: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-
-  font-weight: var(--headers-font-weight);
-  font-size: var(--headers-h2-size);
-  font-family: var(--fonts-family-neucha);
-  line-height: var(--headers-line-height);
+.header-title {
+  z-index: 2;
 }
 
-.universal__headline {
-  margin: 0;
-
-  font-weight: var(--headers-font-weight);
-  font-size: 24px;
-  font-family: var(--fonts-family-neucha);
-  line-height: var(--headers-line-height);
-}
-
-.universal__image {
-  vertical-align: middle;
-}
-
-.universal__texts {
-  column-gap: 30px;
-}
-
-.universal__texts-headline {
-  margin-top: 100px;
-  margin-bottom: 20px;
-  padding: 5px 10px;
-
-  font-weight: 700;
-  font-size: 14px;
-  font-family: var(--fonts-family-open-sans);
-  line-height: var(--headers-line-height);
-  text-transform: uppercase;
-}
-
-.universal__top-part {
-  column-gap: 30px;
-}
-
-/* Bright Theme CSS */
-
-.explanation_bright {
-  color: var(--color-dark);
-}
-
-.header_bright {
-  color: var(--color-dark);
-}
-
-.headline_bright {
-  color: var(--color-dark-shade);
-}
-
-.texts-headline_bright {
-  color: var(--color-white);
-
-  background-color: var(--color-brown);
-}
-
-/* Dark Theme CSS */
-
-.explanation_dark {
-  color: var(--color-white);
-}
-
-.header_dark {
-  color: var(--color-white);
-}
-
-.headline_dark {
-  color: var(--color-white-shade);
-}
-
-.texts-headline_dark {
-  color: var(--color-brown);
-
-  background-color: var(--color-white);
-}
-
-/* Header CSS */
-
-.header__bottom-part {
-  margin-top: 200px;
-}
-
-.header__button {
-  display: inline-block;
-  margin-top: 30px;
-  padding: 12px 24px;
-
-  color: var(--color-white);
-  font-weight: 700;
-  font-size: var(--fonts-size);
-  font-family: var(--fonts-family-open-sans);
-  line-height: var(--fonts-line-height);
-  text-transform: uppercase;
-  text-decoration: 0;
-}
-
-.header__image {
+.header-image {
   position: absolute;
   top: 55px;
   right: -270px;
-  z-index: -1;
+  z-index: 1;
 
   height: 525px;
 }
 
-.header__left-side {
-  width: 50%;
-
-  margin-right: 15px;
+.header-discriptions {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
 }
 
-.header__right-side {
-  width: 50%;
-
-  margin-left: 15px;
+.header-text-left {
+  margin-right: 30px;
 }
 
-/* Video Section CSS */
-
-.section__headline-video {
-  position: relative;
-  top: 100px;
+.header-paragraph {
+  margin-bottom: 40px;
 }
 
-.text_margin_video {
-  position: relative;
-  top: 100px;
-
-  margin-top: 30px;
-  margin-bottom: 30px;
+.text-dark {
+  color: #2a2626;
 }
 
-.video {
-  position: relative;
-  top: 100px;
+.btn {
+  margin-top: 40px;
+  padding: 12px 24px;
+  border: 0;
+
+  color: var(--white);
+  font-weight: bold;
+
+  background-color: var(--main);
 }
 
-/* Navigation Section CSS */
-
-.navigation-container {
-  flex-wrap: wrap;
-
-  row-gap: 20px;
-
-  column-gap: 30px;
+.btn:hover {
+  background-color: var(--brown);
 }
 
-.navigation-container__header {
-  max-width: 350px;
+/* второй слайд */
+.general {
+  text-align: center;
+
+  /* height: 814px; */
 }
 
-.navigation-link {
-  display: block;
-  max-width: 302px;
-  padding: 24px;
+.general > .container {
+  z-index: 1;
 
-  text-decoration: 0;
-
-  background-color: var(--color-bright);
+  align-items: center;
 }
 
-.navigation-link:link {
-  text-decoration: none;
-}
-
-.navigation-link:visited {
-  text-decoration: none;
-}
-
-.navigation-link:hover {
-  text-decoration: none;
-
-  background-color: var(--color-main);
-}
-
-.navigation-link:hover > * {
-  color: var(--color-white);
-}
-
-.navigation-link:active {
-  text-decoration: none;
-}
-
-.navigation-link__header {
-  margin: 0;
-  padding: 0;
-
-  color: var(--color-main);
-  font-weight: var(--headers-font-weight);
-  font-size: 34px;
-  font-family: var(--fonts-family-neucha);
-  line-height: var(--headers-line-height);
-  text-decoration: 0;
-}
-
-.navigation-link__number {
-  margin: 0;
-  padding-bottom: 40px;
-
-  color: var(--color-main-dark);
-  font-weight: var(--headers-font-weight);
-  font-size: 64px;
-  font-family: var(--fonts-family-neucha);
-  line-height: 1;
-  text-decoration: 0;
-}
-
-.navigation-link__text {
-  margin: 0;
-  padding-top: 16px;
-  padding-bottom: 0;
-
-  color: var(--color-dark);
-  font-weight: normal;
-  font-size: var(--fonts-size);
-  font-family: var(--fonts-family-open-sans);
-  line-height: var(--fonts-line-height);
-  text-decoration: 0;
-}
-
-/*
-I don't like to use global styles too much, so...
-*/
-
-/* For Optimization Section Tests */
-
-#premature-optimization > .section__content > div[style] {
-  font-size: var(--fonts-size);
-  font-family: var(--fonts-family-open-sans);
-  line-height: var(--fonts-line-height);
-}
-
-#premature-optimization > .section__content > div[style] > h2 {
-  color: var(--color-main);
-  font-weight: var(--headers-font-weight);
-  font-size: var(--headers-h2-size);
-  font-family: var(--fonts-family-neucha);
-}
-
-/* Footer Section CSS */
-
-.footer__agreement {
-  font-size: 12px;
-}
-
-.footer__agreement-link:visited {
-  color: var(--color-white);
-}
-
-.footer__bottom {
-  margin-top: 60px;
-
+.general-header {
   text-align: center;
 }
 
-.footer__bottom-reference {
-  margin-top: 16px;
+.general-discription {
+  margin: 30px 0;
+}
+
+iframe {
+  position: relative;
+
+  margin-bottom: -200px;
+
+  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
+}
+
+/* третий стайд */
+.list-section {
+  padding-top: 100px;
+
+  background-color: var(--main-dark);
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  padding-left: 0;
+
+  list-style-type: none;
+}
+
+.item-list {
+  display: flexbox;
+  width: 350px;
+  margin-top: 20px;
+  padding: 24px;
+
+  list-style-type: none;
+  background-color: var(--light);
+}
+
+.no-top {
+  margin-top: 0;
+}
+
+.item-list:not(:first-child):hover {
+  background-color: var(--main);
+  cursor: pointer;
+}
+
+.list-title {
+  margin-bottom: 16px;
+  padding: 0;
+
+  background-color: var(--main-dark);
+}
+
+.list-title-main {
+  margin: 0;
+
+  font-weight: 400;
+  font-size: 52px;
+}
+
+.item-count {
+  margin-bottom: 40px;
+
+  color: var(--dark);
+  font-size: 64px;
+  font-style: neacha, normal;
+  line-height: 1;
+}
+
+.item-title {
   margin-bottom: 16px;
 }
 
-.footer__button {
-  position: relative;
-  z-index: 0;
-
-  width: 70px;
-  height: 50px;
-  margin: 0;
-  padding: 0;
-
-  text-transform: uppercase;
-  text-indent: -9999em;
-
-  border: 0;
+.item-list:not(:first-child):hover .item-title {
+  color: var(--white);
 }
 
-.footer__button::before {
-  position: absolute;
-  top: calc(50% - 12px);
-  left: calc(50% - 12px);
+.text-white {
+  color: var(--white);
+}
 
-  width: 24px;
-  height: 24px;
+.item-paragraph {
+  color: var(--main-dark);
+  text-transform: inherit;
+}
 
-  background-image: url("../images/send.svg");
+.item-list:not(:first-child):hover .item-paragraph {
+  color: var(--white);
+}
+
+/* слайд 4 */
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-discriptions-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-text-left {
+  margin-top: 0;
+  margin-right: 30px;
+}
+
+.card-ligth-text {
+  color: var(--light-dark);
+}
+
+.card-dark-text {
+  color: var(--light-white);
+}
+
+.card-dis-text {
+  flex-basis: 50%;
+}
+
+.card-discription {
+  font-weight: normal;
+  font-size: 34px;
+  font-family: Neucha, cursive;
+  line-height: 40.8px;
+}
+
+.card-discription-title-light {
+  margin: 100px 0 20px;
+
+  color: var(--brown);
+
+  background-color: var(--light);
+}
+
+.card-discription-title-dark {
+  margin: 100px 0 20px;
+
+  color: var(--white);
+
+  background-color: var(--brown);
+}
+
+.images-left {
+  margin-left: 30px;
+
+  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
+}
+
+.images-right {
+  margin-right: 30px;
+
+  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
+}
+
+/* ПОДВАЛ */
+.container-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 190px;
+
+  background-color: var(--main-dark);
+}
+
+.email {
+  margin: 55px;
+}
+
+.email-form {
+  display: flex;
+  width: 100%;
+}
+
+.email > p {
+  margin-bottom: 9px;
+}
+
+.input {
+  height: 50px;
+  margin: 0;
+  padding: 15px;
+}
+
+input[placeholder="Ваша электронная почта"] {
+  width: 423px;
+
+  color: var(--light-white);
+  font-size: 13.1px;
+}
+
+.button {
+  width: 70px;
+  height: 50px;
+  border: 0;
+
+  background-color: var(--main);
+  cursor: pointer;
+}
+
+.button::before {
+  display: inline-block;
+  width: 23px;
+  height: 23px;
+  margin-right: 7px;
+
+  vertical-align: middle;
+
+  background-image: url("/images/send.svg");
+  background-repeat: no-repeat;
 
   content: "";
 }
 
-.footer__form-headline {
-  margin-bottom: 9px;
+.post-input {
+  font-size: 12px;
 
-  font-size: 18px;
+  outline: none;
 }
 
-.footer__headline {
-  margin-top: 55px;
-  margin-bottom: 55px;
+.href-underline {
+  text-decoration: underline;
 }
 
-.footer__input {
-  box-sizing: border-box;
+.footer-title {
+  margin: 55px;
 
-  width: calc(100% - 70px);
-  height: 50px;
-  margin: 0;
-  padding: 15px;
-
-  border: 0;
+  font-weight: 400;
 }
 
-.footer__left {
-  flex-grow: 1;
-  align-items: center;
+/* контактная информация */
+
+.container-contact {
+  padding-top: 60px;
+
+  text-align: center;
 }
 
-.footer__right {
-  flex-grow: 1;
-  align-items: center;
+.contact-text {
+  margin-bottom: 16px;
+
+  font-size: 14px;
 }
 
-.footer__top {
-  padding-right: 55px;
-  padding-left: 55px;
-}
-
-.footer__wrapper {
-  width: 100%;
+.no-bottom {
+  margin-bottom: 0;
 }
