--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,63 +1,48 @@
-* {
-  box-sizing: border-box;
+/* -------------------------------- css style -------------------------------- */
+:root {
+  --white: #fff;
+  --white-opacity: #d7ccc0;
+  --light: #f5f4f0;
+  --primary: #fe8a02;
+  --primary-dark: #42413c;
+  --dark: #2a2626;
+  --dark-opacity: #908d8b;
+  --brown: #b09a81;
+  --blue: #1085c5;
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: OpenSans;
+  src: url("../assets/fonts/OpenSans/OpenSans-Regular.ttf");
 }
 
 @font-face {
   font-weight: 400;
   font-family: Neucha;
-  src: url(../fonts/Neucha-Regular.ttf);
+  src: url("../assets/fonts/Neucha/Neucha-Regular.ttf");
 }
 
-@font-face {
-  font-weight: 400;
-  font-family: "Open Sans";
-  src: url(../fonts/OpenSans-Regular.ttf);
-}
-
-:root {
-  --white: #fff;
-  --light-white: #d7ccc0;
-  --light: #f5f4f0;
-  --main: #fe8a02;
-  --main-dark: #42413c;
-  --dark: #2a2626;
-  --light-dark: #908d8b;
-  --brown: #b09a81;
-  --blue: #1085c5;
-}
-
-.color-brown {
-  background-color: var(--brown);
-}
-
-.color-light {
-  background-color: var(--light);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+  font-family: OpenSans, sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.6em;
 
   color: var(--dark);
-  font-size: 16px;
-  line-height: 1.2em;
-}
-
-a {
-  text-decoration: none;
-
-  outline: none;
 }
 
 h1,
 h2,
 h3 {
-  margin: 0;
-  padding: 0;
-
-  color: var(--main);
-  font-family: Neucha, cursive;
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
   line-height: 1.2em;
 }
 
@@ -74,355 +59,559 @@ h3 {
 }
 
 p {
-  margin: 0;
-  padding: 0;
-
-  font-size: 16px;
-  line-height: 1.6em;
+  margin-top: 13px;
 }
 
-.bg-img::before {
+a {
+  text-decoration: none;
 
-  position: absolute;
+  color: inherit;
+}
 
+ul {
+  padding-top: 14px;
+  padding-bottom: 3px;
+  padding-left: 40px;
+}
+
+img {
+  display: block;
+}
+
+.button {
+  max-width: 148px;
   width: 100%;
-  height: 860px;
-  margin: 0;
+  height: 49px;
+  padding: 12px 24px;
 
-  background-image: url("/images/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.1;
+  font-family: OpenSans, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 160%;
+  text-transform: uppercase;
 
-  content: "";
+  color: var(--white);
+  background: var(--primary);
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #ea7600;
+}
+
+.title-primary {
+  color: var(--primary);
 }
 
 .container {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
   max-width: 1110px;
   margin: 0 auto;
   padding: 100px 0;
 }
 
-/* 1 слайд */
-header .container {
-  justify-content: space-between;
-  height: 100vh;
-  min-height: 900px;
+/* -------------------------------- card -------------------------------- */
+.card {
+  padding: 24px;
+
+  background-color: var(--light);
+
+  cursor: pointer;
+}
+
+.card:hover {
+  color: var(--white);
+  background-color: var(--primary);
+}
+
+.card-number {
+  margin-bottom: 40px;
+
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 70px;
+
+  color: var(--primary-dark);
+}
+
+.card:hover .card-number {
+  color: var(--white);
+}
+
+.card-title {
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+
+  color: var(--primary);
+}
+
+.card:hover .card-title {
+  color: var(--white);
+}
+
+.card-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+
+  margin-top: 16px;
+}
+
+.m-10 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+/* -------------------------------- input -------------------------------- */
+.form-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  height: 50px;
+  padding: 15px 0 15px 15px;
+
+  background-color: var(--white);
+  border: none;
+}
+
+.footer-form > label {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+
+  color: var(--white);
+}
+
+.form-input > input {
+  width: 100%;
+
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 160%;
+
+  color: #757575;
+  background: none;
+  outline: none;
+  border: none;
+}
+
+.form-input > input::placeholder {
+  color: #757575;
+  opacity: 0.2;
+}
+
+.button-form {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+  height: 50px;
+
+  background: var(--primary);
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+}
+
+.button-form:hover {
+  background-color: #ea7600;
+}
+
+.button-form:before {
+  position: absolute;
+  top: 13px;
+  left: 23px;
+
+  width: 24px;
+  height: 24px;
+
+  background-image: url("../assets/images/send.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  content: '';
+}
+
+/* -------------------------------- header -------------------------------- */
+.header {
+  position: relative;
+
+  background-color: var(--light);
+}
+
+.header::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-image: url("../assets/images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  content: "";
+  opacity: 0.1;
+}
+
+.header-container {
+  position: relative;
 }
 
 .header-title {
-  z-index: 2;
+  margin-bottom: 185px;
 }
 
 .header-image {
   position: absolute;
   top: 55px;
   right: -270px;
-  z-index: 1;
 
   height: 525px;
 }
 
-.header-discriptions {
+.header-columns {
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
+  flex-direction: row;
+  gap: 30px;
 }
 
-.header-text-left {
-  margin-right: 30px;
+.header-column {
+  width: 540px;
 }
 
-.header-paragraph {
-  margin-bottom: 40px;
-}
-
-.text-dark {
-  color: #2a2626;
-}
-
-.btn {
+.header-button {
   margin-top: 40px;
-  padding: 12px 24px;
-  border: 0;
-
-  color: var(--white);
-  font-weight: bold;
-
-  background-color: var(--main);
 }
 
-.btn:hover {
-  background-color: var(--brown);
-}
+/* -------------------------------- distortion -------------------------------- */
+.distortion {}
 
-/* второй слайд */
-.general {
-  text-align: center;
-
-  /* height: 814px; */
-}
-
-.general > .container {
-  z-index: 1;
-
-  align-items: center;
-}
-
-.general-header {
-  text-align: center;
-}
-
-.general-discription {
-  margin: 30px 0;
-}
-
-iframe {
+.distortion-container {
   position: relative;
 
-  margin-bottom: -200px;
+  height: 814px;
 
-  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
+  text-align: center;
 }
 
-/* третий стайд */
-.list-section {
-  padding-top: 100px;
-
-  background-color: var(--main-dark);
+.distortion-text {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-.list {
+.video {
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
+}
+
+/* -------------------------------- navigation -------------------------------- */
+.nav {
+  background: var(--primary-dark);
+}
+
+.nav-container {
+  padding-top: 200px;
+}
+
+.nav-items {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0;
-  padding-left: 0;
-
-  list-style-type: none;
+  gap: 20px;
 }
 
-.item-list {
-  display: flexbox;
-  width: 350px;
-  margin-top: 20px;
-  padding: 24px;
-
-  list-style-type: none;
-  background-color: var(--light);
-}
-
-.no-top {
-  margin-top: 0;
-}
-
-.item-list:not(:first-child):hover {
-  background-color: var(--main);
-  cursor: pointer;
-}
-
-.list-title {
-  margin-bottom: 16px;
-  padding: 0;
-
-  background-color: var(--main-dark);
-}
-
-.list-title-main {
-  margin: 0;
-
-  font-weight: 400;
-  font-size: 52px;
-}
-
-.item-count {
-  margin-bottom: 40px;
-
-  color: var(--dark);
-  font-size: 64px;
-  font-style: neacha, normal;
-  line-height: 1;
-}
-
-.item-title {
-  margin-bottom: 16px;
-}
-
-.item-list:not(:first-child):hover .item-title {
-  color: var(--white);
-}
-
-.text-white {
-  color: var(--white);
-}
-
-.item-paragraph {
-  color: var(--main-dark);
-  text-transform: inherit;
-}
-
-.item-list:not(:first-child):hover .item-paragraph {
-  color: var(--white);
-}
-
-/* слайд 4 */
-
-.card-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.card-discriptions-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.card-text-left {
-  margin-top: 0;
-  margin-right: 30px;
-}
-
-.card-ligth-text {
-  color: var(--light-dark);
-}
-
-.card-dark-text {
-  color: var(--light-white);
-}
-
-.card-dis-text {
-  flex-basis: 50%;
-}
-
-.card-discription {
-  font-weight: normal;
-  font-size: 34px;
-  font-family: Neucha, cursive;
-  line-height: 40.8px;
-}
-
-.card-discription-title-light {
-  margin: 100px 0 20px;
-
-  color: var(--brown);
-
-  background-color: var(--light);
-}
-
-.card-discription-title-dark {
-  margin: 100px 0 20px;
-
-  color: var(--white);
-
-  background-color: var(--brown);
-}
-
-.images-left {
-  margin-left: 30px;
-
-  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
-}
-
-.images-right {
-  margin-right: 30px;
-
-  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
-}
-
-/* ПОДВАЛ */
-.container-footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 190px;
-
-  background-color: var(--main-dark);
-}
-
-.email {
-  margin: 55px;
-}
-
-.email-form {
-  display: flex;
+.nav-item {
+  max-width: 350px;
   width: 100%;
 }
 
-.email > p {
-  margin-bottom: 9px;
+.nav-title {
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+  font-size: 52px;
+  line-height: 120%;
+
+  color: var(--white);
 }
 
-.input {
-  height: 50px;
-  margin: 0;
-  padding: 15px;
+/* -------------------------------- cognitive-distortions -------------------------------- */
+.cognitive-distortions {
+  position: relative;
+
+  background-color: var(--light);
 }
 
-input[placeholder="Ваша электронная почта"] {
-  width: 423px;
+.cognitive-distortions::before {
+  position: absolute;
+  top: 0;
+  left: 0;
 
-  color: var(--light-white);
-  font-size: 13.1px;
-}
+  height: 100%;
+  width: 100%;
 
-.button {
-  width: 70px;
-  height: 50px;
-  border: 0;
-
-  background-color: var(--main);
-  cursor: pointer;
-}
-
-.button::before {
-  display: inline-block;
-  width: 23px;
-  height: 23px;
-  margin-right: 7px;
-
-  vertical-align: middle;
-
-  background-image: url("/images/send.svg");
+  background-image: url("../assets/images/background.png");
   background-repeat: no-repeat;
-
+  background-size: cover;
   content: "";
+  opacity: 0.1;
 }
 
-.post-input {
-  font-size: 12px;
-
-  outline: none;
+.cognitive-distortions-container {
+  position: relative;
 }
 
-.href-underline {
-  text-decoration: underline;
+.cognitive-distortions-items {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.cognitive-distortions-item {
+  width: 100%;
+}
+
+.cognitive-distortions-image {
+  max-width: 578px;
+  width: 100%;
+}
+
+.cognitive-distortions-image > img {
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+}
+
+.cognitive-distortions-subtitle {
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: var(--dark-opacity);
+}
+
+.cognitive-distortions-title {
+  margin-bottom: 30px;
+}
+
+.cognitive-distortions-text {
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 41px;
+}
+
+.cognitive-distortions-title-small {
+  padding: 5px 10px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+
+  color: var(--white);
+  background: var(--brown);
+}
+
+.cognitive-distortions-indent {
+  margin: 100px 0 20px;
+}
+
+.cognitive-distortions-columns {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.cognitive-distortions-column {
+  max-width: 540px;
+  width: 100%;
+}
+
+/* -------------------------------- cognitive-distortions-invert -------------------------------- */
+.cognitive-distortions-invert {
+  position: relative;
+
+  background-color: var(--brown);
+}
+
+.cognitive-distortions-invert::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  height: 100%;
+  width: 100%;
+
+  background-image: url("../assets/images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  content: "";
+  opacity: 0.1;
+}
+
+.cognitive-distortions-invert-container {
+  position: relative;
+}
+
+.cognitive-distortions-invert-items {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.cognitive-distortions-invert-item {
+  width: 100%;
+}
+
+.cognitive-distortions-invert-image {
+  max-width: 578px;
+  width: 100%;
+}
+
+.cognitive-distortions-invert-image > img {
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+}
+
+.cognitive-distortions-invert-subtitle {
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: var(--white-opacity);
+}
+
+.cognitive-distortions-invert-title {
+  margin-bottom: 30px;
+
+  color: var(--white);
+}
+
+.cognitive-distortions-invert-text {
+  font-family: 'Neucha', sans-serif;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 120%;
+
+  color: var(--white);
+}
+
+.cognitive-distortions-invert-title-small {
+  padding: 5px 10px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+
+  color: var(--brown);
+  background: var(--white);
+}
+
+.cognitive-distortions-invert-indent {
+  margin: 100px 0 20px;
+}
+
+.cognitive-distortions-invert-columns {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.cognitive-distortions-invert-column {
+  max-width: 540px;
+  width: 100%;
+
+  color: var(--white);
+}
+
+/* -------------------------------- footer -------------------------------- */
+.footer {
+}
+
+.footer-container {
+}
+
+.footer-columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+
+  background: var(--primary-dark);
+}
+
+.footer-column {
+  max-width: 485px;
+  width: 100%;
 }
 
 .footer-title {
-  margin: 55px;
+  margin: 55px 0;
 
-  font-weight: 400;
+  color: var(--white);
 }
 
-/* контактная информация */
+.footer-form {
+}
 
-.container-contact {
-  padding-top: 60px;
+.footer-input {
+  margin-top: 9px;
+}
+
+.footer-button {
+}
+
+.footer-rule {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 160%;
+
+  color: var(--white);
+}
+
+.footer-rule a {
+  text-decoration: underline;
+
+  color: var(--white);
+}
+
+.footer-rule a:hover {
+  text-decoration: none;
+}
+
+.footer-contact {
+  margin-top: 60px;
 
   text-align: center;
 }
 
-.contact-text {
+.footer-text {
   margin-bottom: 16px;
 
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
   font-size: 14px;
+  line-height: 160%;
 }
 
-.no-bottom {
+.footer-text:last-child {
   margin-bottom: 0;
+}
+
+.footer-text a {
+  text-decoration: underline;
+
+  color: var(--blue);
+}
+
+.footer-text a:hover {
+  text-decoration: none;
 }
