--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,7 +41,7 @@ body {
 h1,
 h2,
 h3 {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   line-height: 1.2em;
 }
@@ -129,7 +129,7 @@ img {
 .card-number {
   margin-bottom: 40px;
 
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   font-size: 64px;
   line-height: 70px;
@@ -142,7 +142,7 @@ img {
 }
 
 .card-title {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
 
   color: var(--primary);
@@ -179,7 +179,7 @@ img {
 }
 
 .footer-form > label {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 160%;
@@ -190,7 +190,7 @@ img {
 .form-input > input {
   width: 100%;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 13px;
   line-height: 160%;
@@ -225,7 +225,7 @@ img {
   background-color: #ea7600;
 }
 
-.button-form:before {
+.button-form::before {
   position: absolute;
   top: 13px;
   left: 23px;
@@ -236,7 +236,7 @@ img {
   background-image: url("../assets/images/send.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  content: '';
+  content: "";
 }
 
 /* -------------------------------- header -------------------------------- */
@@ -292,7 +292,6 @@ img {
 }
 
 /* -------------------------------- distortion -------------------------------- */
-.distortion {}
 
 .distortion-container {
   position: relative;
@@ -332,7 +331,7 @@ img {
 }
 
 .nav-title {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   font-size: 52px;
   line-height: 120%;
@@ -386,7 +385,7 @@ img {
 }
 
 .cognitive-distortions-subtitle {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
@@ -399,7 +398,7 @@ img {
 }
 
 .cognitive-distortions-text {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   font-size: 34px;
   line-height: 41px;
@@ -478,7 +477,7 @@ img {
 }
 
 .cognitive-distortions-invert-subtitle {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
@@ -493,7 +492,7 @@ img {
 }
 
 .cognitive-distortions-invert-text {
-  font-family: 'Neucha', sans-serif;
+  font-family: "Neucha", sans-serif;
   font-weight: 400;
   font-size: 34px;
   line-height: 120%;
@@ -531,11 +530,8 @@ img {
 }
 
 /* -------------------------------- footer -------------------------------- */
-.footer {
-}
 
-.footer-container {
-}
+
 
 .footer-columns {
   display: flex;
@@ -558,14 +554,8 @@ img {
   color: var(--white);
 }
 
-.footer-form {
-}
-
 .footer-input {
   margin-top: 9px;
-}
-
-.footer-button {
 }
 
 .footer-rule {
@@ -596,7 +586,7 @@ img {
 .footer-text {
   margin-bottom: 16px;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
