--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,7 +41,7 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   line-height: 1.2em;
 }
@@ -129,7 +129,7 @@ img {
 .card-number {
   margin-bottom: 40px;
 
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   font-size: 64px;
   line-height: 70px;
@@ -142,7 +142,7 @@ img {
 }
 
 .card-title {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
 
   color: var(--primary);
@@ -331,7 +331,7 @@ img {
 }
 
 .nav-title {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   font-size: 52px;
   line-height: 120%;
@@ -381,11 +381,11 @@ img {
 }
 
 .cognitive-distortions-image > img {
-  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
 }
 
 .cognitive-distortions-subtitle {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
@@ -398,7 +398,7 @@ img {
 }
 
 .cognitive-distortions-text {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   font-size: 34px;
   line-height: 41px;
@@ -473,11 +473,11 @@ img {
 }
 
 .cognitive-distortions-invert-image > img {
-  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
 }
 
 .cognitive-distortions-invert-subtitle {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
@@ -492,7 +492,7 @@ img {
 }
 
 .cognitive-distortions-invert-text {
-  font-family: "Neucha", sans-serif;
+  font-family: Neucha, sans-serif;
   font-weight: 400;
   font-size: 34px;
   line-height: 120%;
@@ -530,9 +530,6 @@ img {
 }
 
 /* -------------------------------- footer -------------------------------- */
-
-
-
 .footer-columns {
   display: flex;
   flex-direction: row;
@@ -559,7 +556,7 @@ img {
 }
 
 .footer-rule {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 160%;
