--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -380,9 +380,9 @@ img {
   width: 100%;
 }
 
-.cognitive-distortions-image > img {
-  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
-}
+/*.cognitive-distortions-image > img {*/
+/*  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));*/
+/*}*/
 
 .cognitive-distortions-subtitle {
   font-family: Neucha, sans-serif;
@@ -472,9 +472,9 @@ img {
   width: 100%;
 }
 
-.cognitive-distortions-invert-image > img {
-  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
-}
+/*.cognitive-distortions-invert-image > img {*/
+/*  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));*/
+/*}*/
 
 .cognitive-distortions-invert-subtitle {
   font-family: Neucha, sans-serif;
@@ -599,6 +599,6 @@ img {
   color: var(--blue);
 }
 
-.footer-text a:hover {
-  text-decoration: none;
-}
+/*.footer-text a:hover {*/
+/*  text-decoration: none;*/
+/*}*/
